# librtfcomp

./: .gitignore  CHANGELOG  Makefile.am  Makefile.in  acinclude.m4  aclocal.m4  compile_commands.json  configure  configure.ac  configure.in  libtool
debian/: README.source  autoreconf.after  autoreconf.before  changelog  control  copyright  gbp.conf  librtfcomp0.lintian-overrides  not-installed  python-rtfcomp.install  rules  watch
debian/patches/: bookworm-python3-port  series
debian/source/: options
m4/: local_python.m4
python/: Makefile  Makefile.am  Makefile.in  pyrtfcomp.pyx
src/: Makefile  Makefile.am  Makefile.in  rtfconvert.c
tests/: Makefile.am  Makefile.in  test_script.py
